[gd_scene load_steps=9 format=3 uid="uid://hc72175g0g3m"]

[ext_resource type="Script" path="res://scenes/new_battle/battle_actor_2d.gd" id="1_yvdj5"]
[ext_resource type="SpriteFrames" uid="uid://mx5228t1s44m" path="res://assets/textures/placeholder/battle_actor_player/guy_spriteframes.tres" id="2_8udk6"]

[sub_resource type="Gradient" id="Gradient_rm04c"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4eicw"]
gradient = SubResource("Gradient_rm04c")
width = 100
height = 15

[sub_resource type="Gradient" id="Gradient_dkuc1"]
interpolation_mode = 2
colors = PackedColorArray(1, 0, 0, 1, 0.576471, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rvi3c"]
gradient = SubResource("Gradient_dkuc1")
width = 100
height = 15
fill_to = Vector2(1, 0.0107527)

[sub_resource type="Gradient" id="Gradient_we7qc"]
colors = PackedColorArray(0.737229, 0.404465, 0, 1, 0.6, 0.615686, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vb2ju"]
gradient = SubResource("Gradient_we7qc")
width = 100
height = 15

[node name="BattleActor2D" type="Node2D"]
script = ExtResource("1_yvdj5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_8udk6")
animation = &"punch_windup"

[node name="HealthBar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 88.0
offset_right = 50.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_under = SubResource("GradientTexture2D_4eicw")
texture_progress = SubResource("GradientTexture2D_rvi3c")

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "health"
horizontal_alignment = 1

[node name="PostureBar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 107.0
offset_right = 50.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_under = SubResource("GradientTexture2D_4eicw")
texture_progress = SubResource("GradientTexture2D_vb2ju")

[node name="PostureLabel" type="Label" parent="PostureBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "posture"
horizontal_alignment = 1
